--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -1,9 +1,98 @@
 body {
   margin: 0;
+  background-color: #8e58fe;
 }
 
 header {
   display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #f3eaf1;
+  border-radius: 15px;
+  margin: 20px 30px 20px 30px;
+}
+header img {
+  margin-left: 20px;
+}
+
+nav {
+  margin-right: 20px;
+}
+nav a {
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+  color: black;
+  border: 2px solid transparent;
+  border-radius: 10px;
+}
+nav a:hover {
+  /*color:rgb(149, 93, 238);*/
+  border: 2px solid #955dee;
+}
+nav i {
+  margin-right: 10px;
+}
+
+.contain {
+  background-color: #f3eaf1;
+  margin: 20px 80px 20px 80px;
+  border-radius: 15px;
+}
+
+#products {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  padding: 15px;
+  gap: 15px;
+}
+
+footer {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  background-color: #f3eaf1;
+  border-radius: 15px;
+  margin: 20px 30px 20px 30px;
+  height: 90px;
+}
+
+h1 {
+  padding-top: 20px;
+  text-align: center;
+  color: #301b58;
+}
+
+input {
+  padding: 6px;
+  width: 300px;
+}
+
+form {
+  display: flex;
+  align-items: center;
+}
+
+.categories {
+  padding: 6px;
+  background-color: rgba(216, 130, 41, 0.5);
+  /*border: 1px solid black;*/
+  border-bottom-left-radius: 5px;
+  border-top-left-radius: 5px;
+  cursor: pointer;
+}
+
+.btn_search {
+  background-color: rgba(216, 130, 41, 0.5);
+  padding: 6px;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+  cursor: pointer;
+}
+
+article {
+  height: 200px;
+  border: 1px solid #8e58fe;
+  border-radius: 10px;
 }
 
 /*# sourceMappingURL=style.css.map */
