--- a/frontend/sass/layouts/_header.scss
+++ b/frontend/sass/layouts/_header.scss
@@ -1,3 +1,31 @@
 header {
     display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: rgb(243, 234, 241);
+    border-radius: 15px;
+    margin: 20px 30px 20px 30px;
+    img {
+        margin-left: 20px;
+    }
+    }
+
+
+nav {
+    margin-right: 20px;
+    a {
+        padding: 10px 20px 10px 20px;
+        text-decoration: none;
+        color: black;     
+        border: 2px solid transparent;
+        border-radius: 10px;
+        &:hover {
+            /*color:rgb(149, 93, 238);*/
+            border: 2px solid rgb(149, 93, 238);
+        }
+    }
+    i {
+        margin-right: 10px;
+    }
 }
+
