--- a/frontend/sass/main.scss
+++ b/frontend/sass/main.scss
@@ -1,2 +1,7 @@
 @import "./base/general";
 @import "./layouts/header";
+@import "./layouts/contain";
+@import "./layouts/footer";
+@import "./pages/index";
+@import "./components/form";
+@import "./components/article";
