--- a/frontend/sass/components/_article.scss
+++ b/frontend/sass/components/_article.scss
@@ -1,7 +1,7 @@
 article {
     border: 1px solid rgb(142, 88, 254);
     border-radius: 10px;
-    
+    padding: 10px;
 
     img {
         
@@ -9,6 +9,8 @@ article {
         object-fit: cover;
         
     }
+
+    
 }
 
 .group {
