--- a/frontend/sass/layouts/_contain.scss
+++ b/frontend/sass/layouts/_contain.scss
@@ -1,14 +1,18 @@
 .contain {
     background-color: rgb(243, 234, 241);
-    margin: 20px 80px 20px 80px;
-   
+    margin: 20px 30px 20px 30px;
     border-radius: 15px;
+
+    a {
+        text-decoration: none;
+        color: black;
+    }
 }
 
 #products {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    padding: 15px;
-    gap: 15px;
+    padding: 20px;
+    gap: 20px;
 }
 
