--- a/frontend/sass/layouts/_footer.scss
+++ b/frontend/sass/layouts/_footer.scss
@@ -6,4 +6,23 @@ footer {
     border-radius: 15px;
     margin: 20px 30px 20px 30px;
     height: 90px;
+
+    a {
+        
+        text-decoration: none;
+        color: black;     
+       
+        &:hover {
+           
+            color: rgb(108, 27, 238);
+        }
+    }
+
+    i {
+        font-size: 25px;
+    }
+}
+
+.res-sociaux a {
+    padding: 10px;
 }
