--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -33,6 +33,12 @@ nav i {
   margin-right: 10px;
 }
 
+@media only screen and (max-width: 767px) {
+  header {
+    display: flex;
+    flex-direction: column;
+  }
+}
 .contain {
   background-color: #f3eaf1;
   margin: 20px 30px 20px 30px;
@@ -50,6 +56,12 @@ nav i {
   gap: 20px;
 }
 
+@media only screen and (max-width: 767px) {
+  #products {
+    display: flex;
+    flex-direction: column;
+  }
+}
 footer {
   display: flex;
   align-items: center;
@@ -74,6 +86,12 @@ footer i {
   padding: 10px;
 }
 
+@media only screen and (max-width: 767px) {
+  footer {
+    display: flex;
+    flex-direction: column;
+  }
+}
 h1 {
   padding-top: 20px;
   text-align: center;
@@ -108,6 +126,11 @@ form {
   cursor: pointer;
 }
 
+@media only screen and (max-width: 767px) {
+  input {
+    width: 80%;
+  }
+}
 article {
   border: 1px solid #8e58fe;
   border-radius: 10px;
