--- a/frontend/sass/layouts/_contain.scss
+++ b/frontend/sass/layouts/_contain.scss
@@ -16,3 +16,10 @@
     gap: 20px;
 }
 
+@media only screen and (max-width : 767px) {
+     #products {
+        display: flex;
+        flex-direction: column;
+    }
+}
+
