--- a/frontend/sass/layouts/_footer.scss
+++ b/frontend/sass/layouts/_footer.scss
@@ -26,3 +26,10 @@ footer {
 .res-sociaux a {
     padding: 10px;
 }
+
+@media only screen and (max-width : 767px) {
+    footer {
+        display: flex;
+        flex-direction: column;
+    }
+}
