--- a/frontend/sass/layouts/_header.scss
+++ b/frontend/sass/layouts/_header.scss
@@ -29,3 +29,10 @@ nav {
     }
 }
 
+
+@media only screen and (max-width : 767px) {
+    header {
+        display: flex;
+        flex-direction: column;
+    }
+}
