--- a/frontend/sass/layouts/_contain.scss
+++ b/frontend/sass/layouts/_contain.scss
@@ -6,7 +6,13 @@
     a {
         text-decoration: none;
         color: black;
+        transition: all 0.4s;
+        &:hover {
+            box-shadow: 5px 5px 5px rgba(142, 88, 254, 0.4);
+            border-radius: 15px;
+        }
     }
+    
 }
 
 #products {
