--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -4,12 +4,10 @@ body {
 }
 
 header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
   background-color: #f3eaf1;
   border-radius: 15px;
   margin: 20px 30px 20px 30px;
+  padding-bottom: 30px;
 }
 header img {
   margin-left: 20px;
@@ -17,6 +15,9 @@ header img {
 
 nav {
   margin-right: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 nav a {
   padding: 10px 20px 10px 20px;
@@ -31,6 +32,11 @@ nav a:hover {
 }
 nav i {
   margin-right: 10px;
+}
+
+.search {
+  display: flex;
+  justify-content: center;
 }
 
 @media only screen and (max-width: 767px) {
@@ -68,13 +74,12 @@ nav i {
   }
 }
 footer {
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
   background-color: #f3eaf1;
   border-radius: 15px;
   margin: 20px 30px 20px 30px;
-  height: 90px;
+  padding-bottom: 20px;
+  padding-left: 30px;
+  padding-right: 30px;
 }
 footer a {
   text-decoration: none;
@@ -83,12 +88,40 @@ footer a {
 footer a:hover {
   color: #6c1bee;
 }
+footer ul {
+  list-style: none;
+  padding: 0;
+  margin-top: 5px;
+}
 footer i {
   font-size: 25px;
+}
+footer p {
+  margin-bottom: 0;
+  font-weight: bolder;
+}
+
+.about, .pay {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.row-foot {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .res-sociaux a {
   padding: 10px;
+}
+
+.nav-foot {
+  display: flex;
+  justify-content: space-between;
+  margin-left: 20px;
+  margin-right: 20px;
 }
 
 @media only screen and (max-width: 767px) {
@@ -137,7 +170,8 @@ article {
   padding: 10px;
 }
 article img {
-  width: 80%;
+  width: 100%;
+  height: 240px;
   object-fit: cover;
   border-radius: 10px;
   margin-bottom: 10px;
@@ -160,5 +194,7 @@ article img {
 .avis {
   margin-right: 10px;
 }
+
+/*** colors ***/
 
 /*# sourceMappingURL=style.css.map */
