--- a/frontend/sass/components/_article.scss
+++ b/frontend/sass/components/_article.scss
@@ -4,7 +4,8 @@ article {
     padding: 10px;
 
     img {      
-        width: 80%;
+        width: 100%;
+        height: 240px;
         object-fit: cover;    
         border-radius: 10px;
         margin-bottom: 10px;
