--- a/frontend/sass/layouts/_footer.scss
+++ b/frontend/sass/layouts/_footer.scss
@@ -1,30 +1,54 @@
 footer {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
+    
     background-color: rgb(243, 234, 241);
     border-radius: 15px;
     margin: 20px 30px 20px 30px;
-    height: 90px;
-
-    a {
-        
+    padding-bottom: 20px;
+    padding-left: 30px;
+    padding-right: 30px;
+    a {  
         text-decoration: none;
         color: black;     
-       
-        &:hover {
-           
+        &:hover {  
             color: rgb(108, 27, 238);
         }
     }
-
+    ul {
+        list-style: none;
+        padding: 0;
+        margin-top: 5px;
+    }
     i {
         font-size: 25px;
     }
+    p {
+        margin-bottom: 0;
+        font-weight: bolder;
+    }
+}
+
+.about, .pay {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.row-foot {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
 }
 
 .res-sociaux a {
     padding: 10px;
+}
+
+.nav-foot {
+    display: flex;
+    justify-content: space-between;
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
 @media only screen and (max-width : 767px) {
