--- a/frontend/sass/main.scss
+++ b/frontend/sass/main.scss
@@ -3,6 +3,7 @@
 @import "./layouts/contain";
 @import "./layouts/footer";
 @import "./pages/index";
+@import "./pages/cart";
 @import "./components/form";
 @import "./components/article";
 @import "./utils/variables";
