--- a/frontend/sass/pages/_index.scss
+++ b/frontend/sass/pages/_index.scss
@@ -1,6 +1,7 @@
 h1 {
-    padding-top: 20px;
+    
     text-align: center;
     color: rgb(48, 27, 88);
-    margin: 0;
+    margin-bottom: 20px;
+    margin-top: 0;
 }
