html css static

--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -1,12 +1,11 @@
 body {
   margin: 0;
-  background-color: rgba(142, 88, 254, 0.4);
+  background-color: rgba(142, 88, 254, 0.5);
 }
 
 header {
   background-color: #f3eaf1;
-  border-radius: 15px;
-  margin: 20px 30px 20px 30px;
+  margin: 0 0 20px 0;
   padding-bottom: 30px;
 }
 header img {
@@ -26,6 +25,7 @@ nav a {
   border: 2px solid transparent;
   border-radius: 10px;
   transition: all 0.4s;
+  font-size: 16px;
 }
 nav a:hover {
   /*color:rgb(149, 93, 238);*/
@@ -42,8 +42,9 @@ nav .fa-arrow-circle-left {
   font-size: 25px;
   color: transparent;
   transition: all 0.4s;
-  display: flex;
-  align-items: center;
+}
+nav .fa-bars {
+  display: none;
 }
 
 .search {
@@ -56,11 +57,16 @@ nav .fa-arrow-circle-left {
     display: flex;
     flex-direction: column;
   }
-}
-.contain {
-  background-color: #f3eaf1;
-  margin: 20px 30px 20px 30px;
-  border-radius: 15px;
+
+  nav {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  nav .fa-bars {
+    display: flex;
+    align-items: flex-end;
+  }
 }
 .contain a {
   text-decoration: none;
@@ -68,7 +74,7 @@ nav .fa-arrow-circle-left {
   transition: all 0.4s;
 }
 .contain a:hover {
-  box-shadow: 5px 5px 5px rgba(142, 88, 254, 0.4);
+  box-shadow: 5px 5px 5px rgba(216, 130, 41, 0.5);
   border-radius: 15px;
 }
 
@@ -87,8 +93,7 @@ nav .fa-arrow-circle-left {
 }
 footer {
   background-color: #f3eaf1;
-  border-radius: 15px;
-  margin: 20px 30px 20px 30px;
+  margin: 20px 0px 0px 0px;
   padding-bottom: 20px;
   padding-left: 30px;
   padding-right: 30px;
@@ -132,8 +137,12 @@ footer p {
 .nav-foot {
   display: flex;
   justify-content: space-between;
-  margin-left: 20px;
-  margin-right: 20px;
+  margin-top: 20px;
+  font-size: 12px;
+}
+.nav-foot p {
+  font-weight: normal;
+  margin: 0;
 }
 
 @media only screen and (max-width: 767px) {
@@ -143,6 +152,7 @@ footer p {
   }
 }
 h1 {
+  font-size: 23px;
   text-align: center;
   color: #301b58;
   margin-bottom: 20px;
@@ -210,9 +220,13 @@ form {
 }
 
 article {
-  border: 1px solid #8e58fe;
   border-radius: 10px;
   padding: 10px;
+  background-color: #f3eaf1;
+  transition: all 0.4s;
+}
+article:hover {
+  background-color: rgba(216, 130, 41, 0.3);
 }
 article img {
   width: 100%;
