--- a/frontend/sass/components/_article.scss
+++ b/frontend/sass/components/_article.scss
@@ -1,8 +1,12 @@
 article {
-    border: 1px solid rgb(142, 88, 254);
+    
     border-radius: 10px;
     padding: 10px;
-
+    background-color: rgb(243, 234, 241);
+    transition: all 0.4s;
+    &:hover {
+        background-color: rgba(216, 130, 41, 0.3);
+    }
     img {      
         width: 100%;
         height: 240px;
