--- a/frontend/sass/layouts/_header.scss
+++ b/frontend/sass/layouts/_header.scss
@@ -1,7 +1,7 @@
 header  {
     background-color: rgb(243, 234, 241);
-    border-radius: 15px;
-    margin: 20px 30px 20px 30px;
+    
+    margin: 0 0 20px 0;
     padding-bottom: 30px;
     img {
         margin-left: 20px;
@@ -20,6 +20,7 @@ nav {
         border: 2px solid transparent;
         border-radius: 10px;
         transition: all 0.4s;
+        font-size: 16px;
         &:hover {
             /*color:rgb(149, 93, 238);*/
             border: 2px solid rgb(149, 93, 238);
@@ -36,8 +37,10 @@ nav {
         font-size: 25px;
         color: transparent;
         transition: all 0.4s;
-        display: flex;
-        align-items: center;
+        
+    }
+    .fa-bars {
+        display: none;
     }
 }
 
@@ -51,5 +54,15 @@ nav {
     header {
         display: flex;
         flex-direction: column;
+    }
+
+    nav {
+        .fa-bars {
+           display: flex;
+            align-items: flex-end;
+        }
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
     }
 }
