--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -1,6 +1,5 @@
 body {
   margin: 0;
-  background-color: rgba(142, 88, 254, 0.5);
 }
 
 header {
@@ -68,16 +67,6 @@ nav .fa-bars {
     align-items: flex-end;
   }
 }
-.contain a {
-  text-decoration: none;
-  color: black;
-  transition: all 0.4s;
-}
-.contain a:hover {
-  box-shadow: 5px 5px 5px rgba(216, 130, 41, 0.5);
-  border-radius: 15px;
-}
-
 #products {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
@@ -85,12 +74,6 @@ nav .fa-bars {
   gap: 20px;
 }
 
-@media only screen and (max-width: 767px) {
-  #products {
-    display: flex;
-    flex-direction: column;
-  }
-}
 footer {
   background-color: #f3eaf1;
   margin: 20px 0px 0px 0px;
@@ -202,7 +185,7 @@ form {
   align-items: center;
 }
 
-.categories {
+label {
   padding: 6px;
   background-color: rgba(216, 130, 41, 0.5);
   /*border: 1px solid black;*/
@@ -219,41 +202,31 @@ form {
   cursor: pointer;
 }
 
-article {
-  border-radius: 10px;
-  padding: 10px;
-  background-color: #f3eaf1;
-  transition: all 0.4s;
+#ours {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 20px;
+  margin: 40px;
 }
-article:hover {
-  background-color: rgba(216, 130, 41, 0.3);
+#ours a {
+  text-decoration: none;
+  color: black;
+  background-color: rgba(145, 92, 251, 0.5);
+  padding: 15px;
+  border-radius: 15px;
+  transition: all 0.3s;
 }
-article img {
-  width: 100%;
-  height: 240px;
-  object-fit: cover;
-  border-radius: 10px;
-  margin-bottom: 10px;
-  margin-right: 10px;
-}
-
-/*.group {
-    display: flex;
-    justify-content: space-between;
-}*/
-.name {
-  margin-bottom: 10px;
-}
-
-.famous {
-  display: flex;
-  margin: 10px 0 10px 0;
-}
-
-.avis {
-  margin-right: 10px;
+#ours a:hover {
+  background-color: #915cfb;
 }
 
 /*** colors ***/
+#ours img {
+  object-fit: cover;
+  width: 100%;
+  height: 300px;
+  border-top-right-radius: 15px;
+  border-top-left-radius: 15px;
+}
 
 /*# sourceMappingURL=style.css.map */
