--- a/frontend/sass/components/_article.scss
+++ b/frontend/sass/components/_article.scss
@@ -1,39 +1,26 @@
-article {
+
+#ours {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 20px;
+    margin: 40px;
     
-    border-radius: 10px;
-    padding: 10px;
-    background-color: rgb(243, 234, 241);
-    transition: all 0.4s;
-    &:hover {
-        background-color: rgba(216, 130, 41, 0.3);
-    }
-    img {      
-        width: 100%;
-        height: 240px;
-        object-fit: cover;    
-        border-radius: 10px;
-        margin-bottom: 10px;
-        margin-right: 10px;
-          
-    }  
-}
+    a {
+        text-decoration: none;
+        color: black;
+       background-color: rgba(145, 92, 251, 0.5);
+       padding: 15px;
+       border-radius: 15px;
+       transition: all 0.3s;
+       &:hover {
+           background-color: #915cfb;
+       }
+    } 
 
-/*.group {
-    display: flex;
-    justify-content: space-between;
-}*/
-
-.name {
-    margin-bottom: 10px;
-}
-.famous {
-    display: flex;
     
-    margin: 10px 0 10px 0;
+   
 }
 
-.avis {
-    margin-right: 10px;
-}
+
 
 
