--- a/frontend/sass/components/_form.scss
+++ b/frontend/sass/components/_form.scss
@@ -9,7 +9,7 @@ form {
     align-items: center;
 }
 
-.categories {
+label{
     padding: 6px;
     background-color: rgba(216, 130, 41, 0.5);
     /*border: 1px solid black;*/
