--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -18,20 +18,20 @@ nav {
   justify-content: space-between;
 }
 nav a {
-  padding: 10px 20px 10px 20px;
+  padding: 10px;
   text-decoration: none;
   color: black;
   border: 2px solid transparent;
   border-radius: 10px;
   transition: all 0.4s;
   font-size: 16px;
+  font-weight: 600;
 }
 nav a:hover {
-  /*color:rgb(149, 93, 238);*/
-  border: 2px solid #955dee;
+  color: #301b58;
 }
 nav a:hover i {
-  color: #955dee;
+  color: #301b58;
 }
 nav i {
   margin-right: 10px;
@@ -44,6 +44,10 @@ nav .fa-arrow-circle-left {
 }
 nav .fa-bars {
   display: none;
+}
+
+.link {
+  display: flex;
 }
 
 .search {
@@ -211,13 +215,13 @@ label {
 #ours a {
   text-decoration: none;
   color: black;
-  background-color: rgba(145, 92, 251, 0.5);
+  background-color: #f3eaf1;
   padding: 15px;
   border-radius: 15px;
   transition: all 0.3s;
 }
 #ours a:hover {
-  background-color: #915cfb;
+  background-color: rgba(145, 92, 251, 0.5);
 }
 
 /*** colors ***/
