--- a/frontend/sass/components/_article.scss
+++ b/frontend/sass/components/_article.scss
@@ -8,12 +8,12 @@
     a {
         text-decoration: none;
         color: black;
-       background-color: rgba(145, 92, 251, 0.5);
+       background-color: rgb(243, 234, 241);
        padding: 15px;
        border-radius: 15px;
        transition: all 0.3s;
        &:hover {
-           background-color: #915cfb;
+           background-color: rgba(145, 92, 251, 0.5);
        }
     } 
 
