--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -224,11 +224,48 @@ label {
   background-color: rgba(145, 92, 251, 0.5);
 }
 
+#only {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+#only p {
+  align-items: flex-start;
+}
+#only ul {
+  list-style: none;
+  position: absolute;
+  width: 200px;
+}
+#only ul li {
+  display: none;
+}
+#only ul a {
+  color: #915cfb;
+  text-decoration: none;
+}
+#only ul:hover li {
+  display: block;
+}
+
+.choix {
+  position: relative;
+  left: 300px;
+  bottom: 500px;
+}
+
 /*** colors ***/
 #ours img {
   object-fit: cover;
   width: 100%;
   height: 300px;
+  border-top-right-radius: 15px;
+  border-top-left-radius: 15px;
+}
+
+#only img {
+  object-fit: cover;
+  height: 400px;
   border-top-right-radius: 15px;
   border-top-left-radius: 15px;
 }
