--- a/frontend/sass/components/_article.scss
+++ b/frontend/sass/components/_article.scss
@@ -15,12 +15,42 @@
        &:hover {
            background-color: rgba(145, 92, 251, 0.5);
        }
-    } 
-
-    
-   
+    }   
 }
 
+#only {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    p {
+        align-items: flex-start;
+    }
+    ul {
+        list-style: none;
+        position: absolute;
+        width: 200px;
+        li {
+            display: none;
+        }
+        a {
+            color: rgb(145, 92, 251);
+            text-decoration: none;
+        }
+        &:hover {
+            li {
+                display: block;
+            }
+            
+        }
+    }
+    
+}
+
+.choix {
+    position: relative;
+    left: 300px;
+    bottom: 500px;
+}
 
 
 
