--- a/frontend/sass/components/_image.scss
+++ b/frontend/sass/components/_image.scss
@@ -5,3 +5,11 @@
     border-top-right-radius: 15px;
     border-top-left-radius: 15px;
 }
+
+#only img {
+    object-fit: cover;
+  
+    height: 400px;
+    border-top-right-radius: 15px;
+    border-top-left-radius: 15px;
+}
