--- a/frontend/sass/components/_article.scss
+++ b/frontend/sass/components/_article.scss
@@ -13,7 +13,8 @@
        border-radius: 15px;
        transition: all 0.3s;
        &:hover {
-           background-color: rgba(145, 92, 251, 0.5);
+           
+           color: rgba(145, 92, 251, 1)
        }
     }   
 }
