color text index.html

--- a/frontend/sass/components/_article.scss
+++ b/frontend/sass/components/_article.scss
@@ -14,7 +14,7 @@
        transition: all 0.3s;
        &:hover {
            
-           color: rgba(145, 92, 251, 1)
+           color: rgb(108, 27, 238);
        }
     }   
 }
