--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -226,16 +226,16 @@ label {
 
 #only {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  margin: 60px 30px 0 30px;
 }
-#only p {
+#only m p {
   align-items: flex-start;
 }
 #only ul {
   list-style: none;
   position: absolute;
   width: 200px;
+  padding: 0;
 }
 #only ul li {
   display: none;
@@ -247,11 +247,29 @@ label {
 #only ul:hover li {
   display: block;
 }
+#only span {
+  background-color: #915cfb;
+}
+
+.text {
+  display: flex;
+  flex-direction: column;
+}
+.text a {
+  position: relative;
+  bottom: 150px;
+  left: 270px;
+  text-decoration: none;
+  color: white;
+  background-color: #915cfb;
+  border-radius: 15px;
+  padding: 5px;
+  width: 143px;
+}
 
 .choix {
   position: relative;
-  left: 300px;
-  bottom: 500px;
+  top: 200px;
 }
 
 /*** colors ***/
@@ -265,9 +283,9 @@ label {
 
 #only img {
   object-fit: cover;
-  height: 400px;
-  border-top-right-radius: 15px;
-  border-top-left-radius: 15px;
+  height: 300px;
+  border-radius: 15px;
+  margin: 0 30px 30px 30px;
 }
 
 /*# sourceMappingURL=style.css.map */
