--- a/frontend/sass/components/_article.scss
+++ b/frontend/sass/components/_article.scss
@@ -21,8 +21,8 @@
 
 #only {
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    margin: 60px 30px 0 30px;
+    m
     p {
         align-items: flex-start;
     }
@@ -30,6 +30,7 @@
         list-style: none;
         position: absolute;
         width: 200px;
+        padding: 0;
         li {
             display: none;
         }
@@ -44,13 +45,31 @@
             
         }
     }
+    span {
+        background-color: rgb(145, 92, 251);
+    }
     
+}
+
+.text {
+    display: flex;
+    flex-direction: column;
+    a { 
+        position: relative;
+        bottom: 150px;
+        left: 270px;
+        text-decoration: none;
+        color: white;
+        background-color: rgb(145, 92, 251);
+        border-radius: 15px;
+        padding: 5px;
+        width: 143px;
+    }
 }
 
 .choix {
     position: relative;
-    left: 300px;
-    bottom: 500px;
+    top: 200px;
 }
 
 
