--- a/frontend/sass/components/_image.scss
+++ b/frontend/sass/components/_image.scss
@@ -9,7 +9,9 @@
 #only img {
     object-fit: cover;
   
-    height: 400px;
-    border-top-right-radius: 15px;
-    border-top-left-radius: 15px;
+    height: 300px;
+    border-radius: 15px;
+    
+    margin: 0 30px 30px 30px;
+
 }
