--- a/frontend/sass/pages/_cart.scss
+++ b/frontend/sass/pages/_cart.scss
@@ -5,6 +5,11 @@
     padding: 20px;
 }
 
+#commande {
+    display: flex;
+    justify-content: space-between;
+}
+
 .cart {
     display: flex;
         align-items: center;
