--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -28,10 +28,10 @@ nav a {
   font-weight: 600;
 }
 nav a:hover {
-  color: #301b58;
+  color: #6c1bee;
 }
 nav a:hover i {
-  color: #301b58;
+  color: #6c1bee;
 }
 nav i {
   margin-right: 10px;
