--- a/frontend/sass/components/_article.scss
+++ b/frontend/sass/components/_article.scss
@@ -64,6 +64,8 @@
         border-radius: 15px;
         padding: 5px;
         width: 143px;
+        display: flex;
+        justify-content: center;
     }
 }
 
