--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -153,9 +153,11 @@ h1 {
   padding: 20px;
 }
 
-#commande {
+.ligne {
   display: flex;
   justify-content: space-between;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .cart {
@@ -163,9 +165,9 @@ h1 {
   align-items: center;
 }
 
-.product_list {
-  display: flex;
-  justify-content: space-between;
+.total {
+  margin-top: 10px;
+  text-align: right;
 }
 
 .finish {
