--- a/frontend/sass/pages/_cart.scss
+++ b/frontend/sass/pages/_cart.scss
@@ -5,20 +5,24 @@
     padding: 20px;
 }
 
-#commande {
+.ligne {
     display: flex;
     justify-content: space-between;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 .cart {
     display: flex;
-        align-items: center;
+    align-items: center;
 }
 
-.product_list {
-    display: flex;
-    justify-content: space-between;
+.total {
+    margin-top: 10px;
+    text-align: right;
 }
+
+
 
 .finish {
     text-align: center;
