--- a/frontend/sass/components/_article.scss
+++ b/frontend/sass/components/_article.scss
@@ -71,8 +71,30 @@
 
 .choix {
     position: relative;
-    top: 200px;
+    top: 300px;
 }
 
+.qt {
+    display: flex;
+}
 
+.plus {
+margin-left: 10px;
+background-color: rgb(145, 92, 251);
+border-radius: 15px;
+width: 20px;
+display: flex;
+justify-content: center;
+cursor: pointer;
+}
+
+.moins {
+    margin-left: 10px;
+    background-color: rgb(145, 92, 251);
+    border-radius: 15px;
+    width: 20px;
+    display: flex;
+justify-content: center;
+cursor: pointer;
+}
 
