--- a/frontend/sass/pages/_cart.scss
+++ b/frontend/sass/pages/_cart.scss
@@ -5,11 +5,39 @@
     padding: 20px;
 }
 
+#clear {
+    margin-bottom: 20px;
+    p {
+        cursor: pointer;
+        border: 1px solid black;
+        padding: 5px;
+        width: 15%;
+        text-align: center;
+        border-radius: 15px;
+    }
+}
+
 .ligne {
-    display: flex;
+    /*display: flex;
     justify-content: space-between;
     margin-top: 10px;
+    margin-bottom: 10px;*/
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
     margin-bottom: 10px;
+}
+
+.prix {
+    text-align: right;
+}
+
+.remove {
+    padding: 5px;
+    background-color: red;
+    border-radius: 15px;
+    text-align: center;
+    cursor: pointer;
+  
 }
 
 .cart {
