--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -4,8 +4,7 @@ body {
 
 header {
   background-color: #f3eaf1;
-  margin: 0 0 20px 0;
-  padding-bottom: 30px;
+  padding-bottom: 15px;
 }
 header img {
   margin-left: 20px;
@@ -218,49 +217,37 @@ h1 {
   border: 2px solid #955dee;
 }
 
-input {
-  padding: 6px;
-  /*width: 300px;*/
-}
-
-form {
-  display: flex;
-  align-items: center;
-}
-
-label {
-  padding: 6px;
-  background-color: rgba(216, 130, 41, 0.5);
-  /*border: 1px solid black;*/
-  border-bottom-left-radius: 5px;
-  border-top-left-radius: 5px;
-  cursor: pointer;
-}
-
-.btn_search {
-  background-color: rgba(216, 130, 41, 0.5);
-  padding: 6px;
-  border-top-right-radius: 5px;
-  border-bottom-right-radius: 5px;
-  cursor: pointer;
-}
-
-#ours {
+#teddies {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   gap: 20px;
-  margin: 40px;
+  margin: 40px 150px 40px 150px;
 }
-#ours a {
+#teddies a {
+  display: flex;
+  flex-direction: column;
   text-decoration: none;
   color: black;
   background-color: #f3eaf1;
-  padding: 15px;
+  border: 1px solid black;
   border-radius: 15px;
+  box-shadow: 2px 2px 2px black;
   transition: all 0.3s;
 }
-#ours a:hover {
+#teddies a:hover {
   color: #6c1bee;
+  border: 1px solid #6c1bee;
+  box-shadow: 2px 2px 2px #6c1bee;
+}
+#teddies h2, #teddies h3 {
+  font-size: 16px;
+}
+
+#textTeddies {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 0 10px 0 10px;
 }
 
 #only {
@@ -302,7 +289,6 @@ label {
   color: white;
   background-color: #915cfb;
   border-radius: 15px;
-  padding: 5px;
   width: 143px;
   display: flex;
   justify-content: center;
@@ -338,10 +324,10 @@ label {
 }
 
 /*** colors ***/
-#ours img {
+#teddies img {
   object-fit: cover;
   width: 100%;
-  height: 300px;
+  height: 200px;
   border-top-right-radius: 15px;
   border-top-left-radius: 15px;
 }
