--- a/frontend/sass/components/_article.scss
+++ b/frontend/sass/components/_article.scss
@@ -1,22 +1,35 @@
 
-#ours {
+#teddies {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 20px;
-    margin: 40px;
-    
+    margin: 40px 150px 40px 150px;
     a {
+        display: flex;
+        flex-direction: column;
         text-decoration: none;
         color: black;
-       background-color: rgb(243, 234, 241);
-       padding: 15px;
-       border-radius: 15px;
-       transition: all 0.3s;
-       &:hover {
-           
+        background-color: rgb(243, 234, 241);
+        border: 1px solid black;
+        border-radius: 15px;
+        box-shadow: 2px 2px 2px black;
+        transition: all 0.3s;
+        &:hover {
            color: rgb(108, 27, 238);
-       }
+           border: 1px solid rgb(108, 27, 238);
+           box-shadow: 2px 2px 2px rgb(108, 27, 238);
+        }
     }   
+    h2, h3 {
+        font-size: 16px;
+    }
+}
+
+#textTeddies {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 0 10px 0 10px;
 }
 
 #only {
@@ -62,7 +75,6 @@
         color: white;
         background-color: rgb(145, 92, 251);
         border-radius: 15px;
-        padding: 5px;
         width: 143px;
         display: flex;
         justify-content: center;
