--- a/frontend/sass/components/_image.scss
+++ b/frontend/sass/components/_image.scss
@@ -1,7 +1,7 @@
-#ours img {
+#teddies img {
     object-fit: cover;
     width: 100%;
-    height: 300px;
+    height: 200px;
     border-top-right-radius: 15px;
     border-top-left-radius: 15px;
 }
