--- a/frontend/sass/components/_article.scss
+++ b/frontend/sass/components/_article.scss
@@ -8,16 +8,17 @@
         display: flex;
         flex-direction: column;
         text-decoration: none;
-        color: black;
-        background-color: rgb(243, 234, 241);
-        border: 1px solid black;
+        color: white;
+        background-color: rgb(80, 9, 1);
+        border: 1px solid transparent;
         border-radius: 15px;
-        box-shadow: 2px 2px 2px black;
+        box-shadow: 2px 2px 2px transparent;
         transition: all 0.3s;
         &:hover {
-           color: rgb(108, 27, 238);
-           border: 1px solid rgb(108, 27, 238);
-           box-shadow: 2px 2px 2px rgb(108, 27, 238);
+            background-color:  rgb(190, 9, 1);
+           /*border: 1px solid rgb(78, 9, 1);
+           box-shadow: 2px 2px 2px rgb(78, 9, 1);*/
+           
         }
     }   
     h2, h3 {
