--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -70,13 +70,6 @@ nav .fa-bars {
     align-items: flex-end;
   }
 }
-#products {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  padding: 20px;
-  gap: 20px;
-}
-
 footer {
   background-color: #f3eaf1;
   margin: 20px 0px 0px 0px;
@@ -239,9 +232,6 @@ h1 {
   /*border: 1px solid rgb(78, 9, 1);
   box-shadow: 2px 2px 2px rgb(78, 9, 1);*/
 }
-#teddies h2, #teddies h3 {
-  font-size: 16px;
-}
 
 #textTeddies {
   display: flex;
@@ -252,74 +242,25 @@ h1 {
 
 #only {
   display: flex;
-  margin: 60px 30px 0 30px;
-}
-#only m p {
-  align-items: flex-start;
-}
-#only ul {
-  list-style: none;
-  position: absolute;
-  width: 200px;
-  padding: 0;
-}
-#only ul li {
-  display: none;
-}
-#only ul a {
-  color: #915cfb;
-  text-decoration: none;
-}
-#only ul:hover li {
-  display: block;
-}
-#only span {
-  background-color: #915cfb;
-}
-
-.text {
-  display: flex;
-  flex-direction: column;
-}
-.text a {
-  position: relative;
-  bottom: 150px;
-  left: 270px;
-  text-decoration: none;
-  color: white;
-  background-color: #915cfb;
+  margin: 60px 200px 0 200px;
+  border: 1px solid transparent;
   border-radius: 15px;
-  width: 143px;
-  display: flex;
-  justify-content: center;
+  box-shadow: 2px 2px 2px transparent;
 }
 
-.choix {
-  position: relative;
-  top: 300px;
+label {
+  margin-right: 20px;
 }
 
-.qt {
-  display: flex;
+#quantity {
+  width: 50px;
 }
 
-.plus {
-  margin-left: 10px;
-  background-color: #915cfb;
-  border-radius: 15px;
-  width: 20px;
-  display: flex;
-  justify-content: center;
-  cursor: pointer;
-}
-
-.moins {
-  margin-left: 10px;
-  background-color: #915cfb;
-  border-radius: 15px;
-  width: 20px;
-  display: flex;
-  justify-content: center;
+#addTeddy {
+  border: 1px solid black;
+  padding: 5px;
+  border-radius: 10px;
+  display: inline-flex;
   cursor: pointer;
 }
 
@@ -334,7 +275,7 @@ h1 {
 
 #only img {
   object-fit: cover;
-  height: 400px;
+  height: 300px;
   border-radius: 15px;
   margin: 0 30px 30px 30px;
 }
