--- a/frontend/sass/components/_article.scss
+++ b/frontend/sass/components/_article.scss
@@ -1,3 +1,4 @@
+// *** All teddies ***
 
 #teddies {
     display: grid;
@@ -17,13 +18,9 @@
         &:hover {
             background-color:  rgb(190, 9, 1);
            /*border: 1px solid rgb(78, 9, 1);
-           box-shadow: 2px 2px 2px rgb(78, 9, 1);*/
-           
+           box-shadow: 2px 2px 2px rgb(78, 9, 1);*/    
         }
-    }   
-    h2, h3 {
-        font-size: 16px;
-    }
+    }     
 }
 
 #textTeddies {
@@ -33,81 +30,29 @@
     margin: 0 10px 0 10px;
 }
 
+// *** One teddy ***
+
 #only {
     display: flex;
-    margin: 60px 30px 0 30px;
-    m
-    p {
-        align-items: flex-start;
-    }
-    ul {
-        list-style: none;
-        position: absolute;
-        width: 200px;
-        padding: 0;
-        li {
-            display: none;
-        }
-        a {
-            color: rgb(145, 92, 251);
-            text-decoration: none;
-        }
-        &:hover {
-            li {
-                display: block;
-            }
-            
-        }
-    }
-    span {
-        background-color: rgb(145, 92, 251);
-    }
+    margin: 60px 200px 0 200px;
+    border: 1px solid transparent;
+    border-radius: 15px;
+    box-shadow: 2px 2px 2px transparent;
+}
+
+label {
+    margin-right: 20px;
+}
+#quantity {
+    width: 50px;
     
 }
 
-.text {
-    display: flex;
-    flex-direction: column;
-    a { 
-        position: relative;
-        bottom: 150px;
-        left: 270px;
-        text-decoration: none;
-        color: white;
-        background-color: rgb(145, 92, 251);
-        border-radius: 15px;
-        width: 143px;
-        display: flex;
-        justify-content: center;
-    }
-}
-
-.choix {
-    position: relative;
-    top: 300px;
-}
-
-.qt {
-    display: flex;
-}
-
-.plus {
-margin-left: 10px;
-background-color: rgb(145, 92, 251);
-border-radius: 15px;
-width: 20px;
-display: flex;
-justify-content: center;
-cursor: pointer;
-}
-
-.moins {
-    margin-left: 10px;
-    background-color: rgb(145, 92, 251);
-    border-radius: 15px;
-    width: 20px;
-    display: flex;
-justify-content: center;
-cursor: pointer;
+#addTeddy {
+    border: 1px solid black;
+    padding: 5px;
+    border-radius: 10px;
+    display:inline-flex;
+    cursor: pointer;
 }
 
