--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -122,11 +122,16 @@ footer p {
 }
 
 h1 {
+  display: flex;
+  justify-content: center;
   font-size: 23px;
+  color: white;
+  margin: 20px 0 20px 0;
+}
+
+h2 {
   text-align: center;
-  color: #301b58;
-  margin-bottom: 20px;
-  margin-top: 0;
+  color: white;
 }
 
 #erreur {
