--- a/frontend/sass/pages/_index.scss
+++ b/frontend/sass/pages/_index.scss
@@ -1,9 +1,14 @@
 h1 {
+    display: flex;
+    justify-content: center;
     font-size: 23px;
+    color: white;
+    margin: 20px 0 20px 0;
+}
+
+h2 {
     text-align: center;
-    color: rgb(48, 27, 88);
-    margin-bottom: 20px;
-    margin-top: 0;
+    color: white;
 }
 
 #erreur {
