--- a/frontend/sass/pages/_cart.scss
+++ b/frontend/sass/pages/_cart.scss
@@ -7,7 +7,7 @@
 
 #row, .rowCommand {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     //margin-bottom: 5px;
     p {
         text-align: center;
