--- a/frontend/sass/main.scss
+++ b/frontend/sass/main.scss
@@ -4,7 +4,7 @@
 @import "./layouts/footer";
 @import "./pages/index";
 @import "./pages/cart";
-
+@import "./pages/confirmation";
 @import "./components/article";
 @import "./utils/variables";
 @import "./components/image";
