--- a/frontend/sass/pages/_cart.scss
+++ b/frontend/sass/pages/_cart.scss
@@ -1,8 +1,9 @@
 #cart {
     background-color: rgb(243, 234, 241);
-    margin: 20px 150px 20px 150px;
+    margin: 60px 150px 200px 150px;
     border-radius: 15px;
     padding: 20px;
+    padding-bottom: 60px;
 }
 
 #row, .rowCommand {
