--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -1,5 +1,16 @@
-body {
+* {
   margin: 0;
+  padding: 0;
+}
+
+html {
+  height: 100%;
+}
+
+body {
+  min-height: 100%;
+  position: relative;
+  padding-bottom: 50px;
 }
 
 header {
@@ -56,10 +67,11 @@ nav .fa-bars {
 
 footer {
   background-color: #5a0901;
-  margin: 20px 0px 0px 0px;
-  padding-bottom: 20px;
-  padding-left: 30px;
-  padding-right: 30px;
+  padding: 20px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
 footer a {
   text-decoration: none;
@@ -141,9 +153,10 @@ h2 {
 
 #cart {
   background-color: #f3eaf1;
-  margin: 20px 150px 20px 150px;
+  margin: 60px 150px 200px 150px;
   border-radius: 15px;
   padding: 20px;
+  padding-bottom: 60px;
 }
 
 #row, .rowCommand {
@@ -218,11 +231,17 @@ h2 {
   box-shadow: 2px 2px 8px #4e0901;
 }
 
+#terminate {
+  text-align: center;
+  margin: 50px 150px 50px 150px;
+}
+
 #teddies {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   gap: 20px;
-  margin: 40px 150px 40px 150px;
+  margin: 50px 150px 50px 150px;
+  padding-bottom: 100px;
 }
 #teddies a {
   display: flex;
@@ -240,6 +259,9 @@ h2 {
   /*border: 1px solid rgb(78, 9, 1);
   box-shadow: 2px 2px 2px rgb(78, 9, 1);*/
 }
+#teddies a p {
+  margin: 10px 0 10px 0;
+}
 
 #textTeddies {
   display: flex;
@@ -255,6 +277,9 @@ h2 {
   border-radius: 15px;
   box-shadow: 2px 2px 2px transparent;
 }
+#only p {
+  margin: 10px 0 10px 0;
+}
 
 label {
   margin-right: 20px;
@@ -266,10 +291,14 @@ label {
 
 #addTeddy {
   border: 1px solid black;
-  padding: 5px;
+  padding: 10px;
+  color: white;
   border-radius: 10px;
   display: inline-flex;
   cursor: pointer;
+  background-color: #464683;
+  position: relative;
+  top: 50px;
 }
 
 /*** colors ***/
