--- a/frontend/sass/base/_general.scss
+++ b/frontend/sass/base/_general.scss
@@ -1,5 +1,18 @@
-body {
+* {
     margin: 0;
-    
+    padding: 0;
 }
+
+html {
+    height: 100%;
+}
+
+body {
+    min-height: 100%;
+    position: relative;
+    padding-bottom: 50px;
+}
+
+
+
 
