--- a/frontend/sass/components/_article.scss
+++ b/frontend/sass/components/_article.scss
@@ -4,7 +4,8 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 20px;
-    margin: 40px 150px 40px 150px;
+    margin: 50px 150px 50px 150px;
+    padding-bottom: 100px;
     a {
         display: flex;
         flex-direction: column;
@@ -19,6 +20,9 @@
             background-color:  rgb(190, 9, 1);
            /*border: 1px solid rgb(78, 9, 1);
            box-shadow: 2px 2px 2px rgb(78, 9, 1);*/    
+        }
+        p { 
+            margin: 10px 0 10px 0;
         }
     }     
 }
@@ -38,6 +42,9 @@
     border: 1px solid transparent;
     border-radius: 15px;
     box-shadow: 2px 2px 2px transparent;
+    p {
+        margin: 10px 0 10px 0;
+    }
 }
 
 label {
@@ -50,9 +57,13 @@ label {
 
 #addTeddy {
     border: 1px solid black;
-    padding: 5px;
+    padding: 10px;
+    color: white;
     border-radius: 10px;
     display:inline-flex;
     cursor: pointer;
+    background-color: rgb(70, 70, 131);
+    position: relative;
+    top: 50px;
 }
 
