--- a/frontend/sass/layouts/_footer.scss
+++ b/frontend/sass/layouts/_footer.scss
@@ -1,9 +1,11 @@
 footer {
     background-color: rgb(90, 9, 1);
-    margin: 20px 0px 0px 0px;
-    padding-bottom: 20px;
-    padding-left: 30px;
-    padding-right: 30px;
+    padding: 20px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    
     a {  
         text-decoration: none;
         color: white;     
