--- a/frontend/sass/pages/_confirmation.scss
+++ b/frontend/sass/pages/_confirmation.scss
@@ -1,5 +1,12 @@
 #terminate {
     text-align: center;
-    margin: 50px 150px 50px 150px;
+    margin: 120px 150px 50px 150px;
+    border: 1px solid rgb(90, 9, 1);
+    border-radius: 15px;
+    padding: 20px 0 20px 0;
+}
+
+#confirm, #result {
+margin-bottom: 20px;
 }
 
