--- a/frontend/sass/components/_image.scss
+++ b/frontend/sass/components/_image.scss
@@ -8,9 +8,9 @@
 
 #only img {
     object-fit: cover;
-  
+    width: 100%;
     height: 300px;
     border-radius: 15px;
-    margin: 0 30px 30px 30px;
+    margin: 0 30px 30px 0;
 
 }
