--- a/frontend/sass/layouts/_footer.scss
+++ b/frontend/sass/layouts/_footer.scss
@@ -21,7 +21,10 @@ footer {
     }
     i {
         font-size: 25px;
-    }
+        
+    } 
+        
+    
     p {
         margin-bottom: 0;
         font-weight: bolder;
@@ -50,9 +53,9 @@ footer {
     display:inline-block;
     text-align: center;
     padding: 10px;
-    color: black;
+    color: rgb(70, 70, 131);
     &:hover{
-       color: blue;
+        color: rgb(179, 36, 11);
        transform: scale(1.2);
     }
     }
