--- a/frontend/sass/components/_article.scss
+++ b/frontend/sass/components/_article.scss
@@ -44,7 +44,7 @@
     border: 1px solid transparent;
     border-radius: 15px;
     box-shadow: 2px 2px 2px transparent;
-    padding-bottom: 100px;
+    padding-bottom: 150px;
     margin-bottom: 50px;
     p {
         margin: 10px 0 10px 0;
@@ -54,6 +54,7 @@
 #text {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
 }
 
 label {
@@ -65,16 +66,17 @@ label {
 }
 
 #addTeddy {
+    margin: 0;
     border: 1px solid black;
     padding: 10px;
     color: white;
     border-radius: 10px;
    text-align: center;
-   margin: auto;
     cursor: pointer;
     background-color: rgb(70, 70, 131);
     &:hover {
         background-color: rgb(179, 36, 11);
     }
+    
 }
 
