--- a/frontend/sass/layouts/_header.scss
+++ b/frontend/sass/layouts/_header.scss
@@ -1,7 +1,7 @@
 header  {
    // background-color: rgb(90, 9, 1);
    background-color: rgb(70, 70, 131);
-    padding: 15px;
+    padding: 30px 15px 30px 15px;
     img {  
         margin-left: 10px;  
         border-radius: 15px;
