--- a/frontend/sass/main.scss
+++ b/frontend/sass/main.scss
@@ -6,5 +6,6 @@
 @import "./pages/cart";
 @import "./pages/confirmation";
 @import "./components/article";
+//@import "./components/loader";
 @import "./utils/variables";
 @import "./components/image";
