--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Chewy&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -11,11 +12,12 @@ body {
   min-height: 100%;
   position: relative;
   padding-bottom: 50px;
+  font-family: "Chewy", cursive;
 }
 
 header {
   background-color: #464683;
-  padding: 15px;
+  padding: 30px 15px 30px 15px;
 }
 header img {
   margin-left: 10px;
@@ -136,7 +138,7 @@ footer p {
 h1 {
   display: flex;
   justify-content: center;
-  font-size: 28px;
+  font-size: 32px;
   color: white;
   margin: 20px 0 20px 0;
 }
@@ -179,7 +181,7 @@ h2 {
 #total {
   margin-top: 30px;
   text-align: center;
-  background-color: #464683;
+  background-color: #4c4c4c;
   color: white;
   font-size: 18px;
   font-weight: 600;
@@ -190,7 +192,7 @@ h2 {
 
 #contact p {
   text-align: center;
-  background-color: #464683;
+  background-color: #4c4c4c;
   color: white;
   font-size: 18px;
   font-weight: 600;
@@ -200,7 +202,7 @@ h2 {
 }
 
 #yourCart {
-  background-color: #464683;
+  background-color: #4c4c4c;
   color: white;
   font-size: 18px;
   font-weight: 600;
@@ -221,6 +223,7 @@ h2 {
 
 #infoCart {
   text-align: center;
+  font-size: 25px;
 }
 
 #contactInput {
@@ -237,19 +240,19 @@ h2 {
 #submit {
   text-align: center;
   margin-top: 20px;
-  background-color: #464683;
+  background-color: #4c4c4c;
   width: 100%;
   padding: 30px 0 30px 0;
   border-bottom-left-radius: 15px;
   border-bottom-right-radius: 15px;
 }
 #submit a {
-  background-color: #64b66f;
+  background-color: #0bb622;
   padding: 10px 20px 10px 20px;
   text-decoration: none;
   font-weight: bolder;
   color: white;
-  border: 2px solid white;
+  border: 2px solid transparent;
   border-radius: 10px;
   transition: all 0.4s;
   width: 100%;
@@ -257,6 +260,7 @@ h2 {
 #submit a:hover {
   background-color: #025514;
   box-shadow: 2px 2px 8px #4e0901;
+  border: 2px solid white;
 }
 
 #clearCart {
@@ -328,7 +332,7 @@ h2 {
   border: 1px solid transparent;
   border-radius: 15px;
   box-shadow: 2px 2px 2px transparent;
-  padding-bottom: 100px;
+  padding-bottom: 150px;
   margin-bottom: 50px;
 }
 #only p {
@@ -338,6 +342,7 @@ h2 {
 #text {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
 }
 
 label {
@@ -349,12 +354,12 @@ label {
 }
 
 #addTeddy {
+  margin: 0;
   border: 1px solid black;
   padding: 10px;
   color: white;
   border-radius: 10px;
   text-align: center;
-  margin: auto;
   cursor: pointer;
   background-color: #464683;
 }
@@ -374,9 +379,9 @@ label {
 #only img {
   object-fit: cover;
   width: 100%;
-  height: 300px;
+  height: 400px;
   border-radius: 15px;
-  margin: 0 30px 30px 0;
+  margin: 0 30px 0 0;
 }
 
 /*# sourceMappingURL=style.css.map */
