--- a/frontend/sass/base/_general.scss
+++ b/frontend/sass/base/_general.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Chewy&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -11,6 +13,7 @@ body {
     min-height: 100%;
     position: relative;
     padding-bottom: 50px;
+    font-family: 'Chewy', cursive;
 }
 
 
