--- a/frontend/sass/components/_image.scss
+++ b/frontend/sass/components/_image.scss
@@ -9,8 +9,8 @@
 #only img {
     object-fit: cover;
     width: 100%;
-    height: 300px;
+    height: 400px;
     border-radius: 15px;
-    margin: 0 30px 30px 0;
+    margin: 0 30px 0 0;
 
 }
