--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Chewy&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -12,7 +12,7 @@ body {
   min-height: 100%;
   position: relative;
   padding-bottom: 50px;
-  font-family: "Chewy", cursive;
+  font-family: "Roboto", sans-serif;
 }
 
 header {
@@ -67,6 +67,46 @@ nav .fa-bars {
   justify-content: center;
 }
 
+@media only screen and (min-width: 500px) and (max-width: 767px) {
+  nav {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .link {
+    margin-top: 50px;
+  }
+}
+@media only screen and (max-width: 499px) {
+  nav {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .link {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    justify-items: center;
+    width: 100%;
+  }
+  .link a:first-child {
+    grid-row: 1;
+    grid-column-start: 1;
+    grid-column-end: 3;
+  }
+  .link a:nth-child(2) {
+    grid-row: 2;
+    grid-column: 1;
+  }
+  .link a:nth-child(3) {
+    grid-row: 2;
+    grid-column: 2;
+  }
+  .link a {
+    margin: 10px 0 10px 0;
+  }
+}
 footer {
   background-color: #464683;
   padding: 20px;
@@ -136,11 +176,10 @@ footer p {
 }
 
 h1 {
-  display: flex;
-  justify-content: center;
   font-size: 32px;
+  text-align: center;
   color: white;
-  margin: 20px 0 20px 0;
+  margin: 50px 0 50px 0;
 }
 
 h2 {
@@ -295,7 +334,7 @@ h2 {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   gap: 20px;
-  margin: 50px 150px 50px 150px;
+  margin: 50px;
   padding-bottom: 100px;
 }
 #teddies a {
@@ -367,6 +406,18 @@ label {
   background-color: #b3240b;
 }
 
+@media only screen and (max-width: 767px) {
+  #teddies {
+    display: flex;
+    flex-direction: column;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 1200px) {
+  #teddies {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+}
 /*** colors ***/
 #teddies img {
   object-fit: cover;
@@ -382,6 +433,12 @@ label {
   height: 400px;
   border-radius: 15px;
   margin: 0 30px 0 0;
+}
+
+@media only screen and (max-width: 767px) {
+  #teddies img {
+    height: 300px;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
