--- a/frontend/sass/base/_general.scss
+++ b/frontend/sass/base/_general.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Chewy&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap');
 
 * {
     margin: 0;
@@ -13,7 +13,7 @@ body {
     min-height: 100%;
     position: relative;
     padding-bottom: 50px;
-    font-family: 'Chewy', cursive;
+    font-family: 'Roboto', sans-serif;
 }
 
 
