--- a/frontend/sass/layouts/_header.scss
+++ b/frontend/sass/layouts/_header.scss
@@ -54,3 +54,49 @@ nav {
     
 }
 
+
+@media only screen and (min-width: 500px) and (max-width: 767px) {
+    nav {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .link {
+        margin-top: 50px;
+    }
+    
+}
+
+@media only screen and (max-width: 499px) {
+
+   nav {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .link {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+        justify-items: center;
+        width: 100%;
+        a:first-child{
+            grid-row: 1;
+            grid-column-start: 1;
+            grid-column-end: 3;
+        }
+        a:nth-child(2) {
+            grid-row: 2;
+            grid-column: 1;
+        }
+        a:nth-child(3) {
+            grid-row: 2;
+            grid-column: 2;
+        }
+        a {
+            margin: 10px 0 10px 0;
+        }
+    }
+}
+
+
