--- a/frontend/sass/pages/_index.scss
+++ b/frontend/sass/pages/_index.scss
@@ -1,9 +1,10 @@
 h1 {
-    display: flex;
-    justify-content: center;
+    
     font-size: 32px;
+    text-align: center;
     color: white;
-    margin: 20px 0 20px 0;
+    margin: 50px 0 50px 0;
+    
 }
 
 h2 {
