--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -373,6 +373,7 @@ h2 {
   box-shadow: 2px 2px 2px transparent;
   padding-bottom: 150px;
   margin-bottom: 50px;
+  width: 70%;
 }
 #only p {
   margin: 10px 0 10px 0;
@@ -406,13 +407,13 @@ label {
   background-color: #b3240b;
 }
 
-@media only screen and (max-width: 767px) {
+@media only screen and (max-width: 599px) {
   #teddies {
     display: flex;
     flex-direction: column;
   }
 }
-@media only screen and (min-width: 768px) and (max-width: 1200px) {
+@media only screen and (min-width: 600px) and (max-width: 1200px) {
   #teddies {
     display: grid;
     grid-template-columns: 1fr 1fr;
