--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -141,6 +141,8 @@ footer p {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  margin-right: 50px;
+  flex-shrink: 0;
 }
 
 .row-foot {
@@ -168,13 +170,32 @@ footer p {
   display: flex;
   justify-content: space-between;
   margin-top: 20px;
-  font-size: 18px;
+  font-size: 14px;
 }
 .nav-foot p {
   font-weight: normal;
   margin: 0;
 }
 
+@media only screen and (max-width: 767px) {
+  .row-foot {
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+
+  .about, .pay {
+    margin-bottom: 20px;
+    margin-right: 50px;
+  }
+
+  .nav-foot {
+    flex-direction: column;
+  }
+
+  /*.about { 
+      margin-left: 50px;
+  }*/
+}
 h1 {
   font-size: 32px;
   text-align: center;
@@ -411,12 +432,14 @@ label {
   #teddies {
     display: flex;
     flex-direction: column;
+    padding-bottom: 280px;
   }
 }
 @media only screen and (min-width: 600px) and (max-width: 799px) {
   #teddies {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    padding-bottom: 150px;
   }
 }
 /*** colors ***/
