--- a/frontend/sass/components/_article.scss
+++ b/frontend/sass/components/_article.scss
@@ -56,6 +56,9 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    background-color: rgb(243, 234, 241);
+    padding: 20px;
+    border-radius: 15px;
 }
 
 label {
