--- a/frontend/sass/components/_article.scss
+++ b/frontend/sass/components/_article.scss
@@ -94,6 +94,10 @@ label {
         flex-direction: column;
         padding-bottom: 280px;
     }
+    #only {
+        display: flex;
+        flex-direction: column;
+    }
 }
 
 @media only screen and (min-width: 600px) and (max-width: 799px)  {
@@ -102,6 +106,11 @@ label {
         display: grid;
         grid-template-columns: 1fr 1fr ;
         padding-bottom: 150px;
+    }
+
+    #only {
+        display: flex;
+        flex-direction: column;
     }
 
 }
