--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -287,7 +287,7 @@ h2 {
 }
 
 .infoAdd {
-  opacity: 1;
+  opacity: 0;
   width: 30%;
   color: transparent;
   padding: 20px;
@@ -451,6 +451,7 @@ h2 {
 
 label {
   margin: 10px 0 10px 0;
+  padding: 20px;
 }
 
 #quantity {
@@ -485,6 +486,9 @@ label {
     flex-direction: column;
     padding-bottom: 280px;
   }
+  #only select, #only input {
+    padding: 10px;
+  }
 
   #text {
     margin-top: 20px;
@@ -500,6 +504,9 @@ label {
   #only {
     display: flex;
     flex-direction: column;
+  }
+  #only select, #only input {
+    padding: 10px;
   }
 }
 /*** colors ***/
