--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -71,44 +71,24 @@ nav .fa-bars {
   justify-content: center;
 }
 
-@media only screen and (min-width: 500px) and (max-width: 767px) {
+@media only screen and (max-width: 767px) {
+  header {
+    padding: 0;
+    padding-top: 20px;
+  }
+
   nav {
     display: flex;
     flex-direction: column;
+    margin: 0;
   }
 
   .link {
     margin-top: 50px;
-  }
-}
-@media only screen and (max-width: 499px) {
-  nav {
-    display: flex;
-    flex-direction: column;
-  }
-
-  .link {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    justify-items: center;
     width: 100%;
-  }
-  .link a:first-child {
-    grid-row: 1;
-    grid-column-start: 1;
-    grid-column-end: 3;
-  }
-  .link a:nth-child(2) {
-    grid-row: 2;
-    grid-column: 1;
-  }
-  .link a:nth-child(3) {
-    grid-row: 2;
-    grid-column: 2;
-  }
-  .link a {
-    margin: 10px 0 10px 0;
+    background-color: grey;
+    justify-content: space-around;
+    padding: 10px 0 10px 0;
   }
 }
 footer {
@@ -203,13 +183,13 @@ footer p {
 h1 {
   font-size: 32px;
   text-align: center;
-  color: white;
+  color: #464683;
   margin: 50px 0 50px 0;
 }
 
 h2 {
   text-align: center;
-  color: white;
+  color: #464683;
 }
 
 .errorIndex {
@@ -393,7 +373,7 @@ input:valid {
 }
 #terminate {
   text-align: center;
-  margin: 120px 150px 50px 150px;
+  margin: 120px 20px 50px 20px;
   border: 1px solid #5a0901;
   border-radius: 15px;
   padding: 20px 0 20px 0;
@@ -403,6 +383,12 @@ input:valid {
   margin-bottom: 20px;
 }
 
+@media only screen and (max-width: 767px) {
+  #terminate {
+    margin: 40px 15px 350px 15px;
+    font-size: 15px;
+  }
+}
 #teddies {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
