--- a/frontend/sass/layouts/_header.scss
+++ b/frontend/sass/layouts/_header.scss
@@ -61,50 +61,27 @@ nav {
     justify-content: center;
 }
 
-@media only screen and (min-width: 500px) and (max-width: 767px) {
+@media only screen and (max-width: 767px) {
+    header{
+        padding: 0;
+        padding-top: 20px;
+    }
     nav {
         display: flex;
         flex-direction: column;
+        margin: 0;
+        
     }
 
     .link {
         margin-top: 50px;
-    }
-}
-
-@media only screen and (max-width: 499px) {
-    nav {
-        display: flex;
-        flex-direction: column;
-    }
-
-    .link {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: 1fr 1fr;
-        justify-items: center;
         width: 100%;
-
-        a:first-child {
-            grid-row: 1;
-            grid-column-start: 1;
-            grid-column-end: 3;
-        }
-
-        a:nth-child(2) {
-            grid-row: 2;
-            grid-column: 1;
-        }
-
-        a:nth-child(3) {
-            grid-row: 2;
-            grid-column: 2;
-        }
-
-        a {
-            margin: 10px 0 10px 0;
-        }
+        background-color: grey;
+        justify-content: space-around;
+        padding: 10px 0 10px 0;
     }
 }
+
+
 
 
