--- a/frontend/sass/pages/_index.scss
+++ b/frontend/sass/pages/_index.scss
@@ -2,14 +2,14 @@ h1 {
     
     font-size: 32px;
     text-align: center;
-    color: white;
+    color: rgb(70, 70, 131);
     margin: 50px 0 50px 0;
     
 }
 
 h2 {
     text-align: center;
-    color: white;
+    color: rgb(70, 70, 131);
 }
 
 
